# ZKP_Mate

./: .gitignore  CONTRACT_TEST_SOLUTION.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SOLUTION.md  LICENSE  Makefile  QUICK_SETUP_GUIDE.md  README.md  STATS_FEATURE.md
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: PRODUCTION_DEPLOYMENT.md  REAL_DEPLOYMENT_GUIDE.md  craco.config.js  deploy.sh  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css  react-app-env.d.ts  types.ts
frontend/src/components/: ContractConfig.tsx  DemoModeToggle.tsx  ErrorBoundary.tsx  FileUpload.tsx  HashDisplay.tsx  HashVerifier.tsx  HistoryManager.tsx  NetworkSelector.tsx  Particles.tsx  PriceChart.tsx  StatsPanel.tsx  WalletConnector.tsx
frontend/src/services/: contract.ts
frontend/src/utils/: crypto.ts  date.ts
scripts/: Cargo.toml  deploy_simple.rs  deploy_testnet.rs
scripts/src/: main.rs
