[workspace]
members = [
    "scripts"
]
exclude = [
    "contract"
]
resolver = "2"

[workspace.dependencies]
ink = { version = "4.3.0", default-features = false }
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
scale = { package = "parity-scale-codec", version = "3.7", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
openbrush = { version = "4.0.0", default-features = false } 