[package]
name = "timelock-scripts"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "deploy_testnet"
path = "deploy_testnet.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
subxt = { version = "0.38", features = ["substrate-compat"] }
hex = "0.4"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10" 